# tauri-app

./: README.md
.github/workflows/: ci.yml
src/: edgekraft.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  lib.rs  main.rs
workflows/: ci.yml
