[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["redandgreen.co.uk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rig-core = "0.11.0"
rusqlite = "0.34.0"
argon2 = "0.5.3"

[lints.rust]
unused = "allow"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
